# bitmex-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  swagger.json
doc/: Cargo-libra.toml
examples/: build.rs  get_fundings.rs  post_chat.rs  proxy.rs  readme.rs  ws_auth.rs  ws_cancel_all.rs  ws_orderbook_trade.rs  ws_ping.rs  ws_subscribe.rs
src/: client.rs  consts.rs  credential.rs  error.rs  lib.rs  model.rs  models.rs  transport.rs  websocket.rs
src/client/: announcement.rs  api_key.rs  apikey.rs  chat.rs  execution.rs  funding.rs  global_notification.rs  instrument.rs  insurance.rs  leaderboard.rs  liquidation.rs  mod.rs  order.rs  order_book.rs  position.rs  quote.rs  settlement.rs  trade.rs  user.rs  user_event.rs  websocket.rs
src/core/: utils.rs
src/model/: announcement.rs  api_key.rs  chat.rs  definitions.rs  execution.rs  funding.rs  global_notification.rs  instrument.rs  insurance.rs  leaderboard.rs  liquidation.rs  mod.rs  order.rs  order_book.rs  position.rs  public.rs  quote.rs  settlement.rs  swagger.rs  trade.rs  user.rs  user_event.rs  websocket.rs
src/model/websocket/: command.rs  message.rs  topic.rs
src/model/ws/: mod.rs
src/models/: definitions.rs  public.rs  requests.rs
src/models/websocket/: command.rs
src/rest/: client.rs  mod.rs
src/rest/models/: definitions.rs  mod.rs  requests.rs  swagger.rs
src/websocket/: command.rs  message.rs  mod.rs  topic.rs
tests/: announcement.rs  apikey.rs  chat.rs  execution.rs  funding.rs  global_notification.rs  instrument.rs  insurance.rs  leaderboard.rs  liquidation.rs  order.rs  order_book.rs  position.rs  quote.rs  settlement.rs  stats.rs  trade.rs  user.rs  user_event.rs
utils/: parse swagger.ipynb
