[package]
name = "bitmex"
version = "0.1.7"
authors = ["Weiyüen Wu <doomsplayer@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust Library for the BitMEX API (Async)"
keywords = ["cryptocurrency", "trading", "bitmex", "async"]
documentation = "https://docs.rs/crate/bitmex"
repository = "https://github.com/dovahcrow/bitmex-rs"
readme = "README.md"
edition = "2018"


[dependencies]
reqwest = { version = "0.10.0-alpha.2", git = "https://github.com/seanmonstar/reqwest", features = ["json"] }
hyper = "0.13"
hyper-tls = "0.4"
http = "0.2"

url = "2"
futures = "0.3"
tokio = { version = "0.2", features = ["macros"] }
pin-project = "0.4"

failure = "0.1"
log = "0.4"

serde = "1"
serde_json = "1"
serde_derive = "1"

chrono = { version = "0.4", features = ["serde"] }

hex = "0.4"
ring = "0.16"

uuid = { version = "0.8", features = ["serde"] }
tungstenite = "0.9"
tokio-tungstenite = { git = "https://github.com/dovahcrow/tokio-tungstenite", version = "0.10", branch = "tokio2", features = ["tls"] }
lazy_static = "1"

[features]
dev = []

[dev-dependencies]
dotenv = "0.15"
env_logger = "0.7"