[package]
name = "bitmex"
version = "0.2.2"
authors = ["Weiyüen Wu <doomsplayer@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust Library for the BitMEX API (Async)"
keywords = ["cryptocurrency", "trading", "bitmex", "async"]
documentation = "https://docs.rs/crate/bitmex"
repository = "https://github.com/dovahcrow/bitmex-rs"
readme = "README.md"
edition = "2018"
categories = ["api-bindings"]

[badges]
travis-ci = { repository = "dovahcrow/bitmex-rs", branch = "master" }

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
hyper = "0.14"
hyper-tls = "0.5"
http = "0.2"

url = "2"
futures = "0.3"
tokio = { version = "1", features = ["macros"] }
pin-project = "1"

failure = "0.1"
fehler = "1"
log = "0.4"

serde = { version = "1", features = [ "derive" ] } 
serde_json = "1"
serde_urlencoded = "0.7"

chrono = { version = "0.4", features = ["serde"] }

hex = "0.4"
ring = "0.16"

uuid = { version = "0.8", features = ["serde"] }
tungstenite = "0.12"
tokio-tungstenite = { version = "0.13", features = ["tls"] }
lazy_static = "1"
derive_builder = "0.9"

[dev-dependencies]
dotenv = "0.15"
env_logger = "0.8"
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread", "net"] }